# turing-machines

./: .gitignore  Interface.md  LICENSE  README.md  cabal.project.freeze  default.nix  patchelf.nix  project.nix  shell.nix  turing-machine.cabal  turing-machines.cabal
.github/workflows/: build-dynamic.yml  build.yml
app/: Graphviz.hs  Main.hs  Parser.hs  ParserUtils.hs  SVG.hs  Utils.hs
app/Commands/: Eval.hs  Info.hs  Numbered.hs
app/Commands/Abacus/: Parser.hs  Runner.hs
app/Commands/Eval/: Parser.hs  Runner.hs  Speculative.hs
app/Commands/Info/: Parser.hs  Runner.hs
app/Commands/Numbered/: Parser.hs  Runner.hs
examples/: abacus.txt  duplicar.txt  loop.txt  paridad.txt  suc.txt  suma.txt  zero.txt
nix/: sources.json
src/Abacus/: Compiler.hs  Core.hs  Eval.hs  Macro.hs  Parser.hs
src/Data/List/: Utils.hs
src/Data/Text/: Utils.hs
src/Math/: Primes.hs
src/TuringMachines/: Core.hs  Eval.hs  Graphviz.hs  Normalize.hs  Numbering.hs  PPrint.hs  Parser.hs  Quads.hs  Show.hs
src/Utils/: Parsing.hs  QString.hs
test/: MacroUtils.hs  Utils.hs
test/Abacus/: CompileSpec.hs  EvalSpec.hs  MacroCompleteExampleSpec.hs  MacroSpec.hs  ParserSpec.hs
test/Abacus/Macro/: CompileSpec.hs  ExpandMacroSpec.hs  ReifyImplicitsSpec.hs  ResolveImplicitsSpec.hs
test/Abacus/Macro/CompleteExample/: ResolveImplicitsSpec.hs
test/TuringMachines/: EvalSpec.hs  GraphvizSpec.hs  PPrintSpec.hs  ParseSpec.hs  QuadsSpec.hs
