cabal-version:       2.4

name:                turing-machines
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              ggzor
maintainer:          30713864+ggzor@users.noreply.github.com
build-type:          Simple

common shared-properties
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  default-extensions:
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    InstanceSigs
    MultiParamTypeClasses

    LambdaCase
    MultiWayIf
    NamedFieldPuns
    TupleSections
    BlockArguments

    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    GeneralizedNewtypeDeriving
    StandaloneDeriving

    BangPatterns
    KindSignatures
    TypeOperators

    OverloadedStrings

    ScopedTypeVariables
    TypeApplications

    ConstraintKinds
    RankNTypes

    DefaultSignatures
    PatternSynonyms

    ExistentialQuantification
    FunctionalDependencies
    GADTs

    DataKinds
    TypeFamilies
    TypeFamilyDependencies

    QuasiQuotes

library
  import:              shared-properties
  hs-source-dirs:      src
  exposed-modules:
    Data.List.Utils
    TuringMachines.Core
    TuringMachines.Eval
    TuringMachines.Graphviz
    TuringMachines.Numbering
    TuringMachines.Normalize
    TuringMachines.Parser
    TuringMachines.PPrint
    TuringMachines.Quads
    TuringMachines.Show
    Utils.QString
    Math.Primes
  build-depends:
      base
    , containers
    , fmt
    , megaparsec
    , string-interpolate
    , text

executable turing-machines
  import:              shared-properties
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:
      Parser
    , ParserUtils
    , Commands.Numbered
    , Commands.Info
    , Commands.Eval.Parser
    , Commands.Eval.Runner
    , SVG
    , Utils
  build-depends:
      turing-machines
    , ansi-terminal
    , base
    , containers
    , directory
    , fmt
    , lens
    , megaparsec
    , optparse-applicative
    , raw-strings-qq
    , rio
    , string-interpolate
    , temporary
    , text
    , typed-process
    , unliftio
    , xml-conduit
    , xml-lens

test-suite turing-machines-test
  import:              shared-properties
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Utils
  build-depends:
      turing-machines
    , base
    , containers
    , hspec
    , megaparsec
    , raw-strings-qq
    , text
  type:                exitcode-stdio-1.0

