cabal-version:       2.4

name:                turing-machines
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              ggzor
maintainer:          30713864+ggzor@users.noreply.github.com
build-type:          Simple

common shared-properties
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  default-extensions:
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    InstanceSigs
    MultiParamTypeClasses

    LambdaCase
    MultiWayIf
    NamedFieldPuns
    TupleSections
    BlockArguments

    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    GeneralizedNewtypeDeriving
    StandaloneDeriving

    BangPatterns
    KindSignatures
    TypeOperators

    OverloadedStrings

    ScopedTypeVariables
    TypeApplications

    ConstraintKinds
    RankNTypes

    DefaultSignatures
    PatternSynonyms

    ExistentialQuantification
    FunctionalDependencies
    GADTs

    DataKinds
    TypeFamilies
    TypeFamilyDependencies

    QuasiQuotes

library
  import:              shared-properties
  hs-source-dirs:      src
  exposed-modules:
    Abacus.Core
    Abacus.Parser
    Data.List.Utils
    Data.Text.Utils
    TuringMachines.Core
    TuringMachines.Eval
    TuringMachines.Graphviz
    TuringMachines.Numbering
    TuringMachines.Normalize
    TuringMachines.Parser
    TuringMachines.PPrint
    TuringMachines.Quads
    TuringMachines.Show
    Utils.QString
    Utils.Parsing
    Math.Primes
  build-depends:
      base
    , containers
    , megaparsec
    , string-interpolate
    , text

executable turing-machines
  import:              shared-properties
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:
      Parser
    , ParserUtils
    , Commands.Eval.Parser
    , Commands.Eval.Runner
    , Commands.Eval.Speculative
    , Commands.Info.Parser
    , Commands.Info.Runner
    , Commands.Numbered.Parser
    , Commands.Numbered.Runner
    , SVG
    , Graphviz
    , Utils
  build-depends:
      turing-machines
    , ansi-terminal
    , base
    , containers
    , directory
    , lens
    , megaparsec
    , optparse-applicative
    , raw-strings-qq
    , rio
    , string-interpolate
    , temporary
    , text
    , typed-process
    , unliftio
    , xml-conduit
    , xml-lens

test-suite turing-machines-test
  import:              shared-properties
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Utils
  build-depends:
      turing-machines
    , base
    , containers
    , hspec
    , megaparsec
    , raw-strings-qq
    , text
  type:                exitcode-stdio-1.0

